--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 body {
   margin: 0;
+  background-color: var(--base-color);
+  color: white;
+}
+
+:root {
+  --base-color: #282828;
+}
+li {
+  list-style: none;
+}
+ul {
+  padding: 0;
+}
+.top-menu {
+  & > li {
+    float: left;
+    & + & {
+      margin-left: 1rem;
+    }
+    .top-sub-menu {
+      display: none;
+      position: absolute;
+    }
+    &:hover {
+      .top-sub-menu {
+        display: block;
+      }
+    }
+  }
 }
