--- a/src/index.css
+++ b/src/index.css
@@ -2,31 +2,119 @@ body {
   margin: 0;
   background-color: var(--base-color);
   color: white;
+  overflow: hidden;
 }
-
 :root {
-  --base-color: #282828;
+  --base-color: #313131;
+  --bar-color: #393939;
+  --tool-color: ;
 }
 li {
   list-style: none;
+  height: 2rem;
+  line-height: 2rem;
+  white-space: nowrap;
+  padding: 0 0.75rem;
 }
 ul {
   padding: 0;
 }
-.top-menu {
+.menu {
+  margin: 0;
+  width: 100%;
+  height: 2rem;
+  position: relative;
+  background-color: var(--bar-color);
   & > li {
     float: left;
+    position: relative;
+    cursor: default;
+    &:first-child {
+      margin-left: 2.5rem;
+    }
+    &.active,
+    &.active:hover {
+      background-color: white;
+      color: black;
+    }
+    & > button {
+      cursor: pointer;
+      background-color: var(--base-color);
+      color: #fff;
+      width: 100%;
+      height: 100%;
+    }
     & + & {
       margin-left: 1rem;
     }
-    .top-sub-menu {
+    &.active > .menu-list {
+      display: block;
+    }
+    .menu-list {
       display: none;
       position: absolute;
-    }
-    &:hover {
-      .top-sub-menu {
-        display: block;
+      background-color: white;
+      border-radius: 0.25rem;
+      border-top-left-radius: 0;
+      color: black;
+      left: 0;
+      padding: 0.25rem 0;
+      & > li {
+        &:hover {
+          cursor: pointer;
+          background-color: rgba(0, 0, 0, 0.1);
+        }
       }
     }
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
   }
+}
+.tool {
+  display: flex;
+  flex-direction: column;
+  width: 2rem;
+  height: calc(100vh - 2rem);
+  position: absolute;
+  left: 0;
+  top: 2rem;
+  padding: 0 0.25rem;
+  background-color: var(--bar-color);
+}
+.tool-button {
+  width: 100%;
+  cursor: pointer;
+  line-height: 2rem;
+  text-align: center;
+  transform: scale(0.8);
+  &.mirror {
+    transform: scale(-0.8, 0.8);
+  }
+  & > svg {
+    transform: scale(0.8);
+    height: 90%;
+    width: 90%;
+    fill: rgba(255, 255, 255, 0.7);
+  }
+  &:hover > svg {
+    fill: rgba(255, 255, 255, 1);
+  }
+  &.active > svg {
+    fill: #068fff;
+  }
+  &:hover,
+  &.active {
+    transform: scale(1);
+    &.mirror {
+      transform: scale(-1, 1);
+    }
+  }
+}
+.panel {
+  position: absolute;
+  right: 0;
+  height: calc(100vh - 2rem);
+  width: 10rem;
+  background-color: var(--bar-color);
 }
