--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,24 @@ body {
 :root {
   --base-color: #313131;
   --bar-color: #393939;
-  --tool-color: ;
+  --tool-color: #068fff;
+  --shorcut-color: #d8d8d8;
+  --ruler-size: 1rem;
 }
 li {
   list-style: none;
   height: 2rem;
   line-height: 2rem;
   white-space: nowrap;
-  padding: 0 0.75rem;
+  padding: 0 0.5rem 0 0.75rem;
 }
 ul {
   padding: 0;
 }
+/* 상단 메뉴 바 */
 .menu {
   margin: 0;
+  z-index: 6;
   width: 100%;
   height: 2rem;
   position: relative;
@@ -40,7 +44,7 @@ ul {
     & > button {
       cursor: pointer;
       background-color: var(--base-color);
-      color: #fff;
+      color: white;
       width: 100%;
       height: 100%;
     }
@@ -48,6 +52,7 @@ ul {
       margin-left: 1rem;
     }
     &.active > .menu-list {
+      box-shadow: 5px 5px 5px -7px;
       display: block;
     }
     .menu-list {
@@ -60,9 +65,41 @@ ul {
       left: 0;
       padding: 0.25rem 0;
       & > li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 0.5rem;
         &:hover {
           cursor: pointer;
           background-color: rgba(0, 0, 0, 0.1);
+        }
+        & > input[type="checkbox"] {
+          background-color: transparent;
+          border: none;
+          margin: 0;
+          color: var(--tool-color);
+          &:checked {
+            background-color: transparent;
+          }
+        }
+        & > label {
+          display: inline;
+          & > .shortcut {
+            margin-left: 0.5rem;
+            padding: 0 0.5rem;
+            height: 60%;
+            font-size: 0.8rem;
+            line-height: calc(2rem * 0.6);
+            background-color: var(--shorcut-color);
+            border-radius: 0.1rem;
+            display: inline;
+            position: relative;
+            /* & > svg {
+              line-height: 2rem;
+              height: 1rem;
+              display: block;
+            } */
+          }
         }
       }
     }
@@ -71,50 +108,152 @@ ul {
     }
   }
 }
+.width-fill {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 2rem);
+  position: relative;
+  z-index: 5;
+}
+/* 좌측 툴바 */
 .tool {
   display: flex;
   flex-direction: column;
   width: 2rem;
-  height: calc(100vh - 2rem);
-  position: absolute;
-  left: 0;
-  top: 2rem;
+  flex-shrink: 0;
+  height: 100%;
   padding: 0 0.25rem;
   background-color: var(--bar-color);
+  & > .tool-button {
+    width: 100%;
+    cursor: pointer;
+    line-height: 2rem;
+    text-align: center;
+    transform: scale(0.8);
+    &.mirror {
+      transform: scale(-0.8, 0.8);
+    }
+    & > svg {
+      transform: scale(0.8);
+      height: 90%;
+      width: 90%;
+      fill: rgba(255, 255, 255, 0.7);
+    }
+    &:hover > svg {
+      fill: rgba(255, 255, 255, 1);
+    }
+    &.active > svg {
+      fill: var(--tool-color);
+    }
+    &:hover,
+    &.active {
+      transform: scale(1);
+      &.mirror {
+        transform: scale(-1, 1);
+      }
+    }
+  }
+  & > .tool-color {
+    width: 100%;
+    height: 2rem;
+    position: relative;
+    & > .color-fill,
+    & > .color-stroke {
+      position: absolute;
+      overflow: hidden;
+      width: 60%;
+      height: 60%;
+      border: 1px solid black;
+      z-index: 0;
+      &.active {
+        z-index: 1;
+      }
+      &.null {
+        &::after {
+          width: 200%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%) rotate(45deg);
+          content: "";
+          box-sizing: border-box;
+          border-top: 1px solid red;
+        }
+      }
+    }
+    & > .color-fill {
+      top: 0;
+      left: 0;
+    }
+    & > .color-stroke {
+      bottom: 0;
+      right: 0;
+      box-sizing: border-box;
+      & > .fill {
+        width: 40%;
+        height: 40%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 1px solid black;
+        background-color: var(--bar-color);
+      }
+    }
+  }
 }
-.tool-button {
+.canvas {
   width: 100%;
-  cursor: pointer;
-  line-height: 2rem;
-  text-align: center;
-  transform: scale(0.8);
-  &.mirror {
-    transform: scale(-0.8, 0.8);
+  height: 100%;
+  display: flex;
+  overflow: auto;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  & > .ruler {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    & > .horizontal,
+    & > .vertical {
+      position: absolute;
+      background-color: white;
+    }
+    & > .horizontal {
+      width: 100%;
+      height: var(--ruler-size);
+    }
+    & > .vertical {
+      height: 100%;
+      width: var(--ruler-size);
+    }
   }
   & > svg {
-    transform: scale(0.8);
-    height: 90%;
-    width: 90%;
-    fill: rgba(255, 255, 255, 0.7);
+    background-color: white;
+    position: absolute;
   }
-  &:hover > svg {
-    fill: rgba(255, 255, 255, 1);
+  &.select {
+    cursor: default;
   }
-  &.active > svg {
-    fill: #068fff;
+  &.text {
+    cursor: text;
   }
-  &:hover,
-  &.active {
-    transform: scale(1);
-    &.mirror {
-      transform: scale(-1, 1);
+  &.zoom {
+    cursor: zoom-in;
+    &.alt {
+      cursor: zoom-out;
     }
   }
 }
 .panel {
-  position: absolute;
-  right: 0;
-  height: calc(100vh - 2rem);
-  width: 10rem;
+  height: 100%;
+  width: 20rem;
+  box-sizing: border-box;
+  padding: 1rem;
+  flex-shrink: 0;
   background-color: var(--bar-color);
+  .title {
+    font-size: 1.2rem;
+  }
 }
