--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@ body {
   color: white;
   overflow: hidden;
 }
+div:focus-visible {
+  outline: none;
+}
 :root {
   --base-color: #313131;
   --bar-color: #393939;
@@ -203,14 +206,29 @@ ul {
     }
   }
 }
-.canvas {
+.wrap {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+}
+.canvas {
+  width: 100%;
+  height: 100%;
   overflow: auto;
   position: relative;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  &::-webkit-scrollbar {
+    width: 0.8rem;
+    height: 0.8rem;
+    padding: 0.1rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  &::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
   & > .ruler {
     width: 100%;
     height: 100%;
@@ -229,9 +247,16 @@ ul {
       width: var(--ruler-size);
     }
   }
-  & > svg {
-    background-color: white;
-    position: absolute;
+  & > .svg-canvas {
+    display: flex;
+    margin: auto;
+    & > svg {
+      background-color: white;
+      margin: auto;
+      & > *.active {
+        border: 1px solid #000;
+      }
+    }
   }
   &.select {
     cursor: default;
@@ -246,14 +271,64 @@ ul {
     }
   }
 }
+.canvas-footer {
+  text-align: right;
+  flex-shrink: 0;
+  height: 1rem;
+  padding: 0.25rem 0.75rem;
+}
 .panel {
   height: 100%;
   width: 20rem;
-  box-sizing: border-box;
-  padding: 1rem;
-  flex-shrink: 0;
   background-color: var(--bar-color);
-  .title {
-    font-size: 1.2rem;
+  & > div {
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 1rem;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 1.3rem;
+  }
+  & label {
+    display: block;
+    font-size: 1.1rem;
+    width: 100%;
+    &::first-letter {
+      text-transform: uppercase;
+    }
+  }
+  & .input-group {
+    padding: 0.75rem 1.25rem;
+    border: 1px solid white;
+    border-radius: 0.25rem;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  & .row {
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+    & .input-group {
+      width: 100%;
+    }
+  }
+  & .panel-input {
+    background: transparent;
+    border: none;
+    width: 100%;
+    color: var(--tool-color);
+    font-size: 2rem;
+    &:focus-visible {
+      outline: none;
+    }
+    &[type="number"] {
+      &::-webkit-outer-spin-button,
+      &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    }
   }
 }
