--- a/src/index.css
+++ b/src/index.css
@@ -87,22 +87,22 @@ ul {
         }
         & > label {
           display: inline;
-          & > .shortcut {
-            margin-left: 0.5rem;
-            padding: 0 0.5rem;
-            height: 60%;
-            font-size: 0.8rem;
-            line-height: calc(2rem * 0.6);
-            background-color: var(--shorcut-color);
-            border-radius: 0.1rem;
-            display: inline;
-            position: relative;
-            /* & > svg {
-              line-height: 2rem;
-              height: 1rem;
-              display: block;
-            } */
-          }
+        }
+        & .shortcut {
+          margin-left: 0.5rem;
+          padding: 0.1rem 0.5rem;
+          height: 60%;
+          font-size: 0.8rem;
+          line-height: calc(2rem * 0.6);
+          background-color: var(--shorcut-color);
+          border-radius: 0.1rem;
+          display: inline;
+          position: relative;
+          /* & > svg {
+            line-height: 2rem;
+            height: 1rem;
+            display: block;
+          } */
         }
       }
     }
@@ -204,6 +204,66 @@ ul {
         background-color: var(--bar-color);
       }
     }
+  }
+}
+/* 컬러피커 */
+.color-picker {
+  position: absolute;
+  top: 50%;
+  background-color: var(--bar-color);
+  border: 1px solid var(--shorcut-color);
+  padding: 1rem;
+  height: 360px;
+  flex-direction: row;
+  gap: 1rem;
+  z-index: 5;
+  display: none;
+  .sb {
+    width: 360px;
+    height: 100%;
+    background-color: white;
+  }
+  .c {
+    width: 2rem;
+    height: 100%;
+    background: linear-gradient(
+      to bottom,
+      hsl(0, 100%, 50%),
+      hsl(60, 100%, 50%),
+      hsl(120, 100%, 50%),
+      hsl(180, 100%, 50%),
+      hsl(240, 100%, 50%),
+      hsl(300, 100%, 50%),
+      hsl(360, 100%, 50%)
+    );
+  }
+  .info {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.8rem;
+    justify-content: space-between;
+    gap: 1rem;
+    & > fieldset {
+      margin: 0;
+      border-radius: 0.25rem;
+      padding: 0.25rem 0.75rem;
+      & > input {
+        font-size: 1rem;
+        background-color: transparent;
+        border: none;
+        color: white;
+        width: 7rem;
+        &:focus-visible {
+          outline: none;
+        }
+      }
+      & > .color {
+        height: 1.25rem;
+      }
+    }
+  }
+  &.open {
+    display: flex;
   }
 }
 .wrap {
