--- a/src/index.css
+++ b/src/index.css
@@ -209,22 +209,23 @@ ul {
 /* 컬러피커 */
 .color-picker {
   position: absolute;
-  top: 50%;
+  left: 2.5rem;
+  bottom: 2rem;
   background-color: var(--bar-color);
   border: 1px solid var(--shorcut-color);
   padding: 1rem;
-  height: 360px;
+  height: 256px;
   flex-direction: row;
-  gap: 1rem;
+  gap: 0.75rem;
   z-index: 5;
   display: none;
   .sb {
-    width: 360px;
+    width: 256px;
     height: 100%;
     background-color: white;
   }
   .c {
-    width: 2rem;
+    width: 1.25rem;
     height: 100%;
     background: linear-gradient(
       to bottom,
