--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@ body {
   color: white;
   overflow: hidden;
 }
+.draggNone {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 div:focus-visible {
   outline: none;
 }
@@ -223,10 +229,23 @@ ul {
     width: 256px;
     height: 100%;
     background-color: white;
+    position: relative;
+    .arrow {
+      position: absolute;
+      border: 2px solid white;
+      width: 1rem;
+      height: 1rem;
+      border-radius: 1rem;
+      box-sizing: border-box;
+      top: 0;
+      left: 0;
+      transform-origin: center center;
+    }
   }
   .c {
     width: 1.25rem;
     height: 100%;
+    position: relative;
     background: linear-gradient(
       to bottom,
       hsl(0, 100%, 50%),
@@ -237,6 +256,36 @@ ul {
       hsl(300, 100%, 50%),
       hsl(360, 100%, 50%)
     );
+    .arrow {
+      position: absolute;
+      width: 100%;
+      box-sizing: border-box;
+      border-top: 1px solid black;
+      cursor: s-resize;
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+      }
+      &::before {
+        left: 0;
+        top: -4px;
+        width: 0px;
+        height: 0px;
+        border-left: 6px solid white;
+        border-top: 4px solid transparent;
+        border-bottom: 4px solid transparent;
+      }
+      &::after {
+        right: 0;
+        top: -4px;
+        width: 0px;
+        height: 0px;
+        border-right: 6px solid white;
+        border-top: 4px solid transparent;
+        border-bottom: 4px solid transparent;
+      }
+    }
   }
   .info {
     display: flex;
