--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,15 @@ ul {
     height: 100%;
     background-color: white;
     position: relative;
+    .hue,
+    .saturation {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+    .saturation {
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0, 1));
+    }
     .arrow {
       position: absolute;
       border: 2px solid white;
