--- a/src/index.css
+++ b/src/index.css
@@ -225,6 +225,9 @@ ul {
   gap: 0.75rem;
   z-index: 5;
   display: none;
+  &.open {
+    display: flex;
+  }
   .sb {
     width: 256px;
     height: 100%;
@@ -300,9 +303,41 @@ ul {
     display: flex;
     flex-direction: column;
     font-size: 0.8rem;
-    justify-content: space-between;
-    gap: 1rem;
-    & > fieldset {
+    .info-top {
+      display: flex;
+      flex-direction: row;
+      height: 100%;
+      gap: 0.5rem;
+      & .current-new {
+        display: flex;
+        flex-direction: column;
+        width: 5rem;
+        text-align: center;
+        & > .color {
+          height: 50%;
+          box-sizing: border-box;
+          border: 1px solid black;
+          overflow: hidden;
+          position: relative;
+          & + & {
+            border-top: none;
+          }
+          &.null {
+            &::after {
+              width: 200%;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%) rotate(25deg);
+              content: "";
+              box-sizing: border-box;
+              border-top: 1px solid red;
+            }
+          }
+        }
+      }
+    }
+    & fieldset {
       margin: 0;
       border-radius: 0.25rem;
       padding: 0.25rem 0.75rem;
@@ -316,13 +351,28 @@ ul {
           outline: none;
         }
       }
-      & > .color {
-        height: 1.25rem;
-      }
     }
   }
-  &.open {
+  .btn-group {
     display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    & > button {
+      font-size: 0.8rem;
+      border-radius: 0.5rem;
+      border: 1px solid white;
+      color: white;
+      cursor: pointer;
+      padding: 0.25rem 1.5rem;
+      background-color: var(--base-color);
+      text-transform: uppercase;
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+      &:active {
+        background-color: rgba(255, 255, 255, 0.5);
+      }
+    }
   }
 }
 .wrap {
