--- a/src/index.css
+++ b/src/index.css
@@ -163,12 +163,12 @@ ul {
       }
     }
   }
-  & > .tool-color {
+  .tool-color {
     width: 100%;
     height: 2rem;
     position: relative;
-    & > .color-fill,
-    & > .color-stroke {
+    .color-fill,
+    .color-stroke {
       position: absolute;
       overflow: hidden;
       width: 60%;
@@ -191,15 +191,15 @@ ul {
         }
       }
     }
-    & > .color-fill {
+    .color-fill {
       top: 0;
       left: 0;
     }
-    & > .color-stroke {
+    .color-stroke {
       bottom: 0;
       right: 0;
       box-sizing: border-box;
-      & > .fill {
+      .fill {
         width: 40%;
         height: 40%;
         position: absolute;
@@ -209,6 +209,18 @@ ul {
         border: 1px solid black;
         background-color: var(--bar-color);
       }
+    }
+    .color-toggle,
+    .color-default {
+      position: absolute;
+    }
+    .color-toggle {
+      top: 0;
+      right: 0;
+    }
+    .color-default {
+      bottom: 0;
+      left: 0;
     }
   }
 }
