--- a/src/index.css
+++ b/src/index.css
@@ -224,169 +224,7 @@ ul {
     }
   }
 }
-/* 컬러피커 */
-.color-picker {
-  position: absolute;
-  left: 2.5rem;
-  bottom: 2rem;
-  background-color: var(--bar-color);
-  border: 1px solid var(--shorcut-color);
-  padding: 1rem;
-  height: 256px;
-  flex-direction: row;
-  gap: 0.75rem;
-  z-index: 5;
-  display: none;
-  &.open {
-    display: flex;
-  }
-  .sb {
-    width: 256px;
-    height: 100%;
-    background-color: white;
-    position: relative;
-    .hue,
-    .saturation {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
-    .saturation {
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0, 1));
-    }
-    .arrow {
-      position: absolute;
-      border: 2px solid white;
-      width: 1rem;
-      height: 1rem;
-      border-radius: 1rem;
-      box-sizing: border-box;
-      top: 0;
-      left: 0;
-      transform-origin: center center;
-    }
-  }
-  .c {
-    width: 1.25rem;
-    height: 100%;
-    position: relative;
-    background: linear-gradient(
-      to bottom,
-      hsl(0, 100%, 50%),
-      hsl(60, 100%, 50%),
-      hsl(120, 100%, 50%),
-      hsl(180, 100%, 50%),
-      hsl(240, 100%, 50%),
-      hsl(300, 100%, 50%),
-      hsl(360, 100%, 50%)
-    );
-    .arrow {
-      position: absolute;
-      width: 100%;
-      box-sizing: border-box;
-      border-top: 1px solid black;
-      cursor: s-resize;
-      &::before,
-      &::after {
-        content: "";
-        position: absolute;
-      }
-      &::before {
-        left: 0;
-        top: -4px;
-        width: 0px;
-        height: 0px;
-        border-left: 6px solid white;
-        border-top: 4px solid transparent;
-        border-bottom: 4px solid transparent;
-      }
-      &::after {
-        right: 0;
-        top: -4px;
-        width: 0px;
-        height: 0px;
-        border-right: 6px solid white;
-        border-top: 4px solid transparent;
-        border-bottom: 4px solid transparent;
-      }
-    }
-  }
-  .info {
-    display: flex;
-    flex-direction: column;
-    font-size: 0.8rem;
-    .info-top {
-      display: flex;
-      flex-direction: row;
-      height: 100%;
-      gap: 0.5rem;
-      & .current-new {
-        display: flex;
-        flex-direction: column;
-        width: 5rem;
-        text-align: center;
-        & > .color {
-          height: 50%;
-          box-sizing: border-box;
-          border: 1px solid black;
-          overflow: hidden;
-          position: relative;
-          & + & {
-            border-top: none;
-          }
-          &.null {
-            &::after {
-              width: 200%;
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%) rotate(25deg);
-              content: "";
-              box-sizing: border-box;
-              border-top: 1px solid red;
-            }
-          }
-        }
-      }
-    }
-    & fieldset {
-      margin: 0;
-      border-radius: 0.25rem;
-      padding: 0.25rem 0.75rem;
-      & > input {
-        font-size: 1rem;
-        background-color: transparent;
-        border: none;
-        color: white;
-        width: 7rem;
-        &:focus-visible {
-          outline: none;
-        }
-      }
-    }
-  }
-  .btn-group {
-    display: flex;
-    gap: 1rem;
-    flex-direction: column;
-    & > button {
-      font-size: 0.8rem;
-      border-radius: 0.5rem;
-      border: 1px solid white;
-      color: white;
-      cursor: pointer;
-      padding: 0.25rem 1.5rem;
-      background-color: var(--base-color);
-      text-transform: uppercase;
-      &:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-      }
-      &:active {
-        background-color: rgba(255, 255, 255, 0.5);
-      }
-    }
-  }
-}
+
 .wrap {
   width: 100%;
   height: 100%;
@@ -444,6 +282,9 @@ ul {
   }
   &.text {
     cursor: text;
+    &:active {
+      cursor: default;
+    }
   }
   &.zoom {
     cursor: zoom-in;
