--- a/src/index.css
+++ b/src/index.css
@@ -222,6 +222,27 @@ ul {
       bottom: 0;
       left: 0;
     }
+    .color-picker {
+      position: absolute;
+      left: 2.5rem;
+      z-index: 6;
+      display: none;
+      &.open {
+        display: block;
+      }
+      & div[title="null"] {
+        &::after {
+          width: 100%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%) rotate(45deg);
+          content: "";
+          box-sizing: border-box;
+          border-top: 1px solid red;
+        }
+      }
+    }
   }
 }
 
