--- a/src/index.css
+++ b/src/index.css
@@ -262,6 +262,7 @@ ul {
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: hidden;
   flex-direction: column;
 }
 .canvas {
@@ -377,6 +378,7 @@ ul {
 .panel {
   height: 100%;
   width: 20rem;
+  flex-shrink: 0;
   background-color: var(--bar-color);
   & > div {
     height: 100%;
@@ -402,6 +404,15 @@ ul {
     border: 1px solid white;
     border-radius: 0.25rem;
     background-color: rgba(255, 255, 255, 0.1);
+    & > legend {
+      font-size: 1.1rem;
+    }
+    & > legend::first-letter {
+      text-transform: uppercase;
+    }
+    & > input {
+      font-size: 1.5rem;
+    }
   }
   & .row {
     display: flex;
