--- a/src/index.css
+++ b/src/index.css
@@ -390,7 +390,7 @@ ul {
 }
 .panel {
   height: 100%;
-  width: 20rem;
+  width: 17rem;
   flex-shrink: 0;
   background-color: var(--bar-color);
   & > div {
@@ -449,6 +449,90 @@ ul {
       &::-webkit-inner-spin-button {
         -webkit-appearance: none;
         margin: 0;
+      }
+    }
+  }
+  .align {
+    .horizontal,
+    .vertical {
+      display: flex;
+      border-radius: 0.25rem;
+      flex-direction: row;
+      gap: 1rem;
+      justify-content: center;
+      & > div {
+        width: 25%;
+        height: 3rem;
+        position: relative;
+        cursor: pointer;
+        border-radius: 0.25rem;
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.1);
+        }
+      }
+    }
+    .horizontal {
+      & > div::after {
+        width: 0.2rem;
+        height: 2.5rem;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+      & > div::before {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 2rem;
+        height: 1rem;
+      }
+      & > div::before,
+      div::after {
+        content: "";
+        position: absolute;
+        background-color: white;
+        border-radius: 0.2rem;
+      }
+      .left::after {
+        left: 0;
+      }
+      .center::after {
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .right::after {
+        right: 0;
+      }
+    }
+    .vertical {
+      & > div::after {
+        width: 2.5rem;
+        height: 0.2rem;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      & > div::before {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 1rem;
+        height: 2rem;
+      }
+      & > div::before,
+      div::after {
+        content: "";
+        position: absolute;
+        background-color: white;
+        border-radius: 0.2rem;
+      }
+      .top::after {
+        top: 0;
+      }
+      .middle::after {
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .bottom::after {
+        bottom: 0;
       }
     }
   }
