--- a/src/index.css
+++ b/src/index.css
@@ -341,6 +341,12 @@ ul {
     }
   }
 }
+legend {
+  font-size: 1rem;
+}
+legend::first-letter {
+  text-transform: uppercase;
+}
 .canvas-footer {
   flex-shrink: 0;
   padding: 0.25rem 0.75rem;
@@ -417,12 +423,6 @@ ul {
     border: 1px solid white;
     border-radius: 0.25rem;
     background-color: rgba(255, 255, 255, 0.1);
-    & > legend {
-      font-size: 1.1rem;
-    }
-    & > legend::first-letter {
-      text-transform: uppercase;
-    }
     & > input {
       font-size: 1.5rem;
     }
@@ -486,7 +486,7 @@ ul {
         height: 1rem;
       }
       & > div::before,
-      div::after {
+      & > div::after {
         content: "";
         position: absolute;
         background-color: white;
