--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,9 @@ body {
   --bar-color: #393939;
   --tool-color: #068fff;
   --shorcut-color: #d8d8d8;
-  --command-color: #323339;
+  --modal-color: #323339;
   --ruler-size: 1rem;
+  --warning-color: #ffc436;
 }
 li {
   list-style: none;
@@ -614,90 +615,147 @@ legend::first-letter {
     animation: open 0.25s ease;
   }
 }
-.command-dialog {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: calc(100% - 10rem);
-  height: calc(100% - 10rem);
-  background-color: var(--command-color);
-  color: white;
-  border-radius: 1rem;
-  padding: 1.5rem;
-  box-sizing: border-box;
-  display: none;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
-    rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
-    rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  &.open {
-    display: block;
-  }
-  .dialog {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    .title {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
+.modal {
+  & > div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--modal-color);
+    color: white;
+    border-radius: 1rem;
+    padding: 1.5rem;
+    box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
+      rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
+      rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    &.command {
+      width: calc(100% - 10rem);
+      height: calc(100% - 10rem);
     }
-    .command-exit::after {
-      position: absolute;
-      top: 1.5rem;
-      right: 1.5rem;
-      display: inline-block;
-      content: "\00d7";
-      font-size: 2rem;
-      font-weight: 600;
-      cursor: pointer;
+    &.source {
+      top: 50%;
+      width: 45rem;
+      height: 35rem;
+      .dialog {
+        overflow: auto;
+      }
+      .code {
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        overflow: auto;
+        color: black;
+        box-sizing: border-box;
+        padding: 1rem;
+        #code {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
-    .multi {
-      -webkit-column-count: 2;
-      -moz-column-count: 2;
-      column-count: 2;
-      -webkit-column-gap: 1.5rem;
-      -moz-column-gap: 1.5rem;
-      column-gap: 1.5rem;
-      .dialog-scope {
+    .dialog {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      .title {
+        font-size: 1.5rem;
+      }
+      & button {
+        width: 50%;
+        border: none;
+        color: white;
+        padding: 0.25rem;
+        box-sizing: border-box;
+        font-size: 1.1rem;
+        font-weight: 600;
+        cursor: pointer;
+        position: relative;
+        &.copy {
+          background-color: var(--warning-color);
+        }
+        &.save {
+          background-color: var(--tool-color);
+        }
+        &:active::after {
+          position: absolute;
+          top: 0;
+          left: 0;
+          content: "";
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.1);
+        }
+      }
+      .exit::after {
+        position: absolute;
+        top: 1.5rem;
+        right: 1.5rem;
         display: inline-block;
-        padding-bottom: 1rem;
-        border-bottom: 1px solid var(--shorcut-color);
-        .sub-title {
-          margin-top: 1rem;
-          font-weight: bold;
-        }
-        .shortcut {
-          margin-top: 0.75rem;
-        }
-        & .btn-shortcut {
-          display: inline;
+        content: "\00d7";
+        font-size: 2rem;
+        font-weight: 600;
+        cursor: pointer;
+      }
+      .multi,
+      .code {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+      }
+      .multi {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+        -webkit-column-gap: 1.5rem;
+        -moz-column-gap: 1.5rem;
+        column-gap: 1.5rem;
+        .dialog-scope {
+          display: inline-block;
+          padding-bottom: 1rem;
+          border-bottom: 1px solid var(--shorcut-color);
+          .sub-title {
+            margin-top: 1rem;
+            font-weight: bold;
+          }
+          .shortcut {
+            margin-top: 0.75rem;
+          }
+          & .btn-shortcut {
+            display: inline;
+            & + & {
+              margin-left: 0.5rem;
+            }
+          }
           & + & {
-            margin-left: 0.5rem;
+            padding-top: 1rem;
           }
         }
-        & + & {
-          padding-top: 1rem;
+      }
+      /* 992 이상 */
+      @media (min-width: 992px) {
+        .multi {
+          -webkit-column-count: 3;
+          -moz-column-count: 3;
+          column-count: 3;
         }
       }
     }
-    /* 992 이상 */
-    @media (min-width: 992px) {
-      .multi {
-        -webkit-column-count: 3;
-        -moz-column-count: 3;
-        column-count: 3;
-      }
-    }
-    &::-webkit-scrollbar {
-      width: 0.8rem;
-      height: 0.8rem;
-      padding: 0.1rem;
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: rgba(255, 255, 255, 0.8);
-    }
-    &::-webkit-scrollbar-track {
-      background-color: rgba(255, 255, 255, 0.1);
-    }
+  }
+}
+.scroll {
+  &::-webkit-scrollbar {
+    width: 0.8rem;
+    height: 0.8rem;
+    padding: 0.1rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  &::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.1);
   }
 }
